fixing spacing issues

--- a/src/Profile.css
+++ b/src/Profile.css
@@ -1,20 +1,13 @@
 .profile-container {
     color: #a5561e;
-    background-color: #ffa500; /* Added background color */
-    position: fixed; /* Position the dialog relative to the viewport */
-    top: 50%; /* Center vertically */
-    left: 50%; /* Center horizontally */
-    transform: translate(-50%, -50%); /* Adjust for the dialog's own dimensions */ 
+    background-color: #ffa500; 
+    position: fixed; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
 }
 
-.light-theme::part(dialog) {
-    background: #f9f9f9;
-    color: #000; 
-    border-radius: 15px;
-    overflow: hidden;
-    width:100%
-  }
-.light-theme::part(body) {
+.profile-container::part(body) {
     height: 300px;
     width:500px
   }
